2003-10-26  Mark Grebe  <markgrebe@yahoo.com>
* cartridge.c, sio.c, statesav.c: saving disk and cartridge info
  in the state file. Bumped the state file version number, and then added
  save functions to the Cart and SIO files. It currently supports reading
  the current version (3) as well as the new version (4) state files.
  It writes only the new version (4). The filename information for cartridge
  and disk information is stored in two ways. It is stored as a relative
  path if the file is in the emulator's directory tree, and it is stored
  as an absolute path if it isn't. If it doesn't find the cartridge or disk,
  it does not refuse to load the state, but continues. New state file format
  works extremely well with the bank switched cartridges.


2003-10-25  Petr Stehlik  <pstehlik@sophics.cz>
* atari_falcon.c: disable compiling with stereo sound enabled

* log.c: do MacOSX a favor and generally allow platform specific Aprint
  output

* atari.c: wrong path to disk image is not a reason to quit with an error
  message

* mzpokeysnd.c: simple fix for SERIO_SOUND (thanks to Mark Grebe)

* pokey.c: some platforms (MacOSX) might need different SOUND_GAIN
  so it's possible to define it in configure/Makefile now.

* atari_sdl.c: hatefully backported fix from input.c (see 2003-09-21)
  Somebody should inspect the atari_sdl.c why it doesn't use the 
  Atari800_Frame system and possibly use it in the SDL port as well.

* DOC/TODO: some items removed, some edited.


2003-10-24  Piotr Fusik  <fox@scene.pl>
* sio.c: "Overmind" runs with NEW_CYCLE_EXACT and SIO patch enabled.
  I implemented NO_SECTOR_DELAY in 0.9.9i to allow running the "Overmind"
  demo.  Originally this hack relied on the xpos variable and thus wasn't
  NEW_CYCLE_EXACT compatible.  Now the delay occurs only between
  successive reads of sector 1, not every time reading sector 2.
  This makes every disk image boot 0.2 sec. faster.
* sio.h: NO_SECTOR_DELAY is internal to sio.c

